re-teste da criação de páginas

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,14 +15,12 @@ theme:
             name: Modo claro
 
 nav:
-    - home : index.md
-    - Integrantes: "integrantes.md"
-    - Atas:
-    - Apresentações:
-    - Planejamento: 
-      - Cronograma: planejamento/cronograma.md
-      - Ferramentas: planejamento/ferramentas.md
-      # - Metodologia: planejamento/metodologia.md
-      - Processo de Design: planejamento/processo_design.md
-      - Sites Avaliados: planejamento/sites_avaliados.md
-      - Site Escolhido: planejamento/site_escolhido.md
+  - Início: index.md
+  - Atas:
+  - Apresentações:
+  - Planejamento: 
+    - Cronograma: planejamento/cronograma.md
+    - Ferramentas: planejamento/ferramentas.md
+    - Processo de Design: planejamento/processo_design.md
+    - Sites Avaliados: planejamento/sites_avaliados.md
+    - Site Escolhido: planejamento/site_escolhido.md
