--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,19 @@
 site_name: My Docs
+site_autor: Grupo 8
+site_description: >-
+  Documentação para o projeto realizado na disciplina de Interação Humano Computador da Universidade de Brasília. 
+
 
 theme: 
     name: material
+    language: pt-BR
+    features:
+    - navigation.instant
+    - navigation.section
+    - navigation.path
+    - navigation.top
+    - navigation.tabs
+    - navigation.tabs.sticky
     palette:
         - scheme: default
           primary: blue
@@ -13,9 +25,11 @@ theme:
           toggle:
             icon: material/weather-sunny
             name: Modo claro
+    
 
 nav:
   - Início: index.md
+
   - Planejamento: 
     - Cronograma: planejamento/cronograma.md
     - Ferramentas: planejamento/ferramentas.md
