--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,38 +1,41 @@
 site_name: My Docs
 site_autor: Grupo 8
 site_description: >-
-  Documentação para o projeto realizado na disciplina de Interação Humano Computador da Universidade de Brasília. 
+  Documentação para o projeto realizado na disciplina de Interação Humano Computador da Universidade de Brasília.
 
-
-theme: 
-    name: material
-    language: pt-BR
-    features:
+theme:
+  name: material
+  language: pt-BR
+  features:
     - navigation.instant
     - navigation.section
     - navigation.path
     - navigation.top
     - navigation.tabs
     - navigation.tabs.sticky
-    palette:
-        - scheme: default
-          primary: blue
-          toggle:
-            icon: material/weather-night
-            name: Modo noturno
-        - scheme: slate
-          primary: deep blue
-          toggle:
-            icon: material/weather-sunny
-            name: Modo claro
-    
+  palette:
+    - scheme: default
+      primary: blue
+      toggle:
+        icon: material/weather-night
+        name: Modo noturno
+    - scheme: slate
+      primary: deep blue
+      toggle:
+        icon: material/weather-sunny
+        name: Modo claro
 
 nav:
   - Início: index.md
 
-  - Planejamento: 
-    - Cronograma: planejamento/cronograma.md
-    - Ferramentas: planejamento/ferramentas.md
-    - Processo de Design: planejamento/processo_design.md
-    - Sites Avaliados: planejamento/sites_avaliados.md
-    - Site Escolhido: planejamento/site_escolhido.md
+  - Planejamento:
+      - Cronograma: planejamento/cronograma.md
+      - Ferramentas: planejamento/ferramentas.md
+      - Processo de Design: planejamento/processo_design.md
+      - Sites Avaliados: planejamento/sites_avaliados.md
+      - Site Escolhido: planejamento/site_escolhido.md
+
+  - Atas:
+      - Ata 1: atas/ata1.md
+      - Ata 2: atas/ata2.md
+      - Ata 3: atas/ata3.md
