--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: My Docs
-site_autor: Grupo 8
+site_name: Central Expresso
+site_author: Grupo 8
 site_description: >-
   Documentação para o projeto realizado na disciplina de Interação Humano Computador da Universidade de Brasília. 
 
