--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,9 +4,9 @@ site_description: >-
   Documentação para o projeto realizado na disciplina de Interação Humano Computador da Universidade de Brasília.
 
 theme:
-    name: material
-    language: pt-BR
-    features:
+  name: material
+  language: pt-BR
+  features:
     - navigation.instant
     - navigation.section
     - navigation.path
@@ -15,30 +15,28 @@ theme:
     - navigation.tabs.sticky
   palette:
     - scheme: default
-      primary: blue
+      primary: purple
       toggle:
         icon: material/weather-night
         name: Modo noturno
     - scheme: slate
-      primary: deep blue
+      primary: purple
       toggle:
         icon: material/weather-sunny
         name: Modo claro
 
 nav:
   - Início: index.md
-
   - Planejamento:
       - Cronograma: planejamento/cronograma.md
       - Ferramentas: planejamento/ferramentas.md
       - Processo de Design: planejamento/processo_design.md
       - Sites Avaliados: planejamento/sites_avaliados.md
       - Site Escolhido: planejamento/site_escolhido.md
+      - Atas:
+          - Ata 1: atas/ata1.md
+          - Ata 2: atas/ata2.md
+          - Ata 3: atas/ata3.md
 
-  - Atas:
-      - Ata 1: atas/ata1.md
-      - Ata 2: atas/ata2.md
-      - Ata 3: atas/ata3.md
-      
 extra_css:
   - custom.css
