--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
   - Planejamento:
       - Cronograma: planejamento/cronograma.md
       - Ferramentas: planejamento/ferramentas.md
+      - Metodologia: planejamento/metodologia.md
       - Processo de Design: planejamento/processo_design.md
       - Sites Avaliados: planejamento/sites_avaliados.md
       - Site Escolhido: planejamento/site_escolhido.md
