--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,8 @@ nav:
       - Processo de Design: planejamento/processo_design.md
       - Sites Avaliados: planejamento/sites_avaliados.md
       - Site Escolhido: planejamento/site_escolhido.md
+  - Apresentações: 
+      - Apresentação 1: apresentacoes/apresentacao_1.md 
   - Atas:
           - Ata 1: atas/ata1.md
           - Ata 2: atas/ata2.md
