ajustes e novas páginas

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,10 @@ nav:
       - Aspectos Éticos: requisitos/etica.md
       - Perfil de Usuários: requisitos/perfil_usuarios.md 
       - Personas: requisitos/personas.md
-      - Análise de Tarefas: requisitos/analise_tarefas.md
+      - Cenários: requisitos/cenarios.md
+      - Análise de Tarefas: 
+          - HTA: requisitos/analise_tarefas_hta.md
+          - GOMS: requisitos/analise_tarefas_goms.md
 
 extra_css:
   - custom.css
