Co-authored-by: Pedro Henrique Fernandino <PedroHenrique061@users.noreply.github.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,6 +53,7 @@ nav:
       - Análise de Tarefas:
           - HTA: requisitos/analise_tarefas_hta.md
           - GOMS: requisitos/analise_tarefas_goms.md
+      - Princípios Gerais: requisitos/principios_gerais.md
 
 extra_css:
   - custom.css
