--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
       - Ata 5: atas/ata5.md
       - Ata 6: atas/ata6.md
       - Ata 7: atas/ata7.md
+      - Ata 8: atas/ata8.md
   - Apresentações:
       - Apresentação 1: apresentacoes/apresentacao_1.md
       - Apresentação 2: apresentacoes/apresentacao_2.md
