Adicionando Planejamento do Relato de Avaliação

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,5 +66,6 @@ nav:
               - Planejamento do Relato dos Resultados da Avaliação do Storyboard: design_avaliacao/nivel_1/storyboard/planejamento_resultados.md
           - Análise de Tarefas:
               - Planejamento da Avaliação da Análise de Tarefas: design_avaliacao/nivel_1/analise_tarefas/planejamento_avaliacao.md
+              - Planejamento do Relato da Avaliação da Análise de Tarefas: design_avaliacao/nivel_1/analise_tarefas/planejamento_relato_avaliacao.md
 extra_css:
   - custom.css
