--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,7 @@ nav:
   - Design, Avaliação e Desenvolvimento:
       - Nível 1:
           - StoryBoard:
+              - Storyboard: design_avaliacao/nivel_1/storyboard/storyboard.md
               - Planejamento da Avaliação do Storyboard: design_avaliacao/nivel_1/storyboard/planejamento_avaliacao.md
               - Planejamento do Relato dos Resultados da Avaliação do Storyboard: design_avaliacao/nivel_1/storyboard/planejamento_resultados.md
           - Análise de Tarefas:
