estrutura do relato da análise de tarefas

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,6 +69,7 @@ nav:
           - Análise de Tarefas:
               - Planejamento da Avaliação da Análise de Tarefas: design_avaliacao/nivel_1/analise_tarefas/planejamento_avaliacao.md
               - Planejamento do Relato da Avaliação da Análise de Tarefas: design_avaliacao/nivel_1/analise_tarefas/planejamento_relato_avaliacao.md
+              - Relato da Avaliação da Análise de Tarefas: design_avaliacao/nivel_1/analise_tarefas/relato_avaliacao.md
       - Nível 2:
           - Protótipo de Papel:
             - Planejamento da Avaliação do Protótipo de Papel: design_avaliacao/nivel_2/prototipo_papel/planejamento_avaliacao.md
