--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,14 +66,15 @@ nav:
               - Storyboard: design_avaliacao/nivel_1/storyboard/storyboard.md
               - Planejamento da Avaliação do Storyboard: design_avaliacao/nivel_1/storyboard/planejamento_avaliacao.md
               - Planejamento do Relato dos Resultados da Avaliação do Storyboard: design_avaliacao/nivel_1/storyboard/planejamento_resultados.md
+              - Relato dos Resultados da Avaliação do Storyboard: design_avaliacao/nivel_1/storyboard/relato_resultados.md
           - Análise de Tarefas:
               - Planejamento da Avaliação da Análise de Tarefas: design_avaliacao/nivel_1/analise_tarefas/planejamento_avaliacao.md
               - Planejamento do Relato da Avaliação da Análise de Tarefas: design_avaliacao/nivel_1/analise_tarefas/planejamento_relato_avaliacao.md
               - Relato da Avaliação da Análise de Tarefas: design_avaliacao/nivel_1/analise_tarefas/relato_avaliacao.md
       - Nível 2:
           - Protótipo de Papel:
-            - Planejamento da Avaliação do Protótipo de Papel: design_avaliacao/nivel_2/prototipo_papel/planejamento_avaliacao.md
-            - Planejamento do Relato dos Resultados da Avaliação do Protótipo de Papel: design_avaliacao/nivel_2/prototipo_papel/planejamento_relato.md
+              - Planejamento da Avaliação do Protótipo de Papel: design_avaliacao/nivel_2/prototipo_papel/planejamento_avaliacao.md
+              - Planejamento do Relato dos Resultados da Avaliação do Protótipo de Papel: design_avaliacao/nivel_2/prototipo_papel/planejamento_relato.md
 
 extra_css:
   - custom.css
