--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ nav:
       - Ata 6: atas/ata6.md
       - Ata 7: atas/ata7.md
       - Ata 8: atas/ata8.md
+      - Ata 9: atas/ata9.md
   - Apresentações:
       - Apresentação 1: apresentacoes/apresentacao_1.md
       - Apresentação 2: apresentacoes/apresentacao_2.md
