ajuste da estrutura e atualização do cronograma

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,7 +80,8 @@ nav:
               - Planejamento do Relato dos Resultados da Avaliação do Protótipo de Papel: design_avaliacao/nivel_2/prototipo_papel/planejamento_relato.md
       - Nível 3:
           - Protipo de Alta Fidelidade:
-              - Planejamento relato Prototipo de Alta Fidelidade: Design_avaliacao/nivel_3/planejamento_relato_PAF.md
+              - Planejamento da Avaliação do Prototipo de Alta Fidelidade: Design_avaliacao/nivel_3/PlanejamentoResultadosA.md
+              - Planejamento do Relato da Avaliação do Prototipo de Alta Fidelidade: Design_avaliacao/nivel_3/planejamento_relato_PAF.md
   - Verificação:
       - Grupo 1 (CD-MOJ):
         - Planejamento da Verificação: verificacao/planej_verificacao.md
