--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,8 @@ nav:
           - Protótipo de Papel:
               - Planejamento da Avaliação do Protótipo de Papel: design_avaliacao/nivel_2/prototipo_papel/planejamento_avaliacao.md
               - Planejamento do Relato dos Resultados da Avaliação do Protótipo de Papel: design_avaliacao/nivel_2/prototipo_papel/planejamento_relato.md
+              - Protótipo de Papel: design_avaliacao/nivel_2/prototipo_papel/prototipo_papel.md
+              - Relato dos Resultados da Avaliação do Protótipo de Papel: design_avaliacao/nivel_2/prototipo_papel/relato.md
       - Nível 3:
           - Protipo de Alta Fidelidade:
               - Planejamento da Avaliação do Prototipo de Alta Fidelidade: Design_avaliacao/nivel_3/planejamento_avaliacao_PAF.md
