--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,6 +84,7 @@ nav:
           - Protipo de Alta Fidelidade:
               - Planejamento da Avaliação do Prototipo de Alta Fidelidade: Design_avaliacao/nivel_3/planejamento_avaliacao_PAF.md
               - Planejamento do Relato da Avaliação do Prototipo de Alta Fidelidade: Design_avaliacao/nivel_3/planejamento_relato_PAF.md
+              - Prototipo de Alta Fidelidade: Design_avaliacao/nivel_3/prototipo_AF.md
   - Verificação:
       - Grupo 1 (CD-MOJ):
         - Planejamento da Verificação: verificacao/planej_verificacao.md
