--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,10 +81,10 @@ nav:
               - Protótipo de Papel: design_avaliacao/nivel_2/prototipo_papel/prototipo_papel.md
               - Relato dos Resultados da Avaliação do Protótipo de Papel: design_avaliacao/nivel_2/prototipo_papel/relato.md
       - Nível 3:
-          - Protipo de Alta Fidelidade:
-              - Planejamento da Avaliação do Prototipo de Alta Fidelidade: Design_avaliacao/nivel_3/planejamento_avaliacao_PAF.md
-              - Planejamento do Relato da Avaliação do Prototipo de Alta Fidelidade: Design_avaliacao/nivel_3/planejamento_relato_PAF.md
-              - Prototipo de Alta Fidelidade: Design_avaliacao/nivel_3/prototipo_AF.md
+          - Protótipo de Alta Fidelidade:
+              - Planejamento da Avaliação do Protótipo de Alta Fidelidade: Design_avaliacao/nivel_3/planejamento_avaliacao_PAF.md
+              - Planejamento do Relato da Avaliação do Protótipo de Alta Fidelidade: Design_avaliacao/nivel_3/planejamento_relato_PAF.md
+              - Protótipo de Alta Fidelidade: Design_avaliacao/nivel_3/prototipo_AF.md
   - Verificação:
       - Grupo 1 (CD-MOJ):
         - Planejamento da Verificação: verificacao/planej_verificacao.md
