--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,7 @@ nav:
       - Apresentação 4: apresentacoes/apresentacao_4.md
       - Apresentação 5: apresentacoes/apresentacao_5.md
       - Apresentação 6.1: apresentacoes/apresentacao_6_1.md
+      - Apresentação 7: apresentacoes/apresentacao_7.md
   - Análise de Requisitos:
       - Aspectos Éticos: requisitos/etica.md
       - Perfil de Usuários: requisitos/perfil_usuarios.md
